@@ -53,6 +53,7 @@ namespace Jack
         fMidiPlaybackPortList = NULL;
 #ifdef JACK_MONITOR
         fNetTimeMon = NULL;
+	fRcvSyncUst = 0;
 #endif
     }
 
@@ -481,22 +482,27 @@ namespace Jack
         if ( SyncRecv() == SOCKET_ERROR )
             return 0;
 
-        //take the time at the beginning of the cycle
-        JackDriver::CycleTakeBeginTime();
+#ifdef JACK_MONITOR
+        // For timing  
+        fRcvSyncUst = GetMicroSeconds();
+#endif
 
         //decode sync
         //if there is an error, don't return -1, it will skip Write() and the network error probably won't be identified
         DecodeSyncPacket();
  
 #ifdef JACK_MONITOR
-        fNetTimeMon->Add ( ( ( float ) ( GetMicroSeconds() - JackDriver::fBeginDateUst ) / ( float ) fEngineControl->fPeriodUsecs ) * 100.f );
+        fNetTimeMon->Add ( ( ( float ) ( GetMicroSeconds() - fRcvSyncUst ) / ( float ) fEngineControl->fPeriodUsecs ) * 100.f );
 #endif
         //audio, midi or sync if driver is late
         if ( DataRecv() == SOCKET_ERROR )
             return SOCKET_ERROR;
 
+	//take the time at the beginning of the cycle
+        JackDriver::CycleTakeBeginTime();
+
 #ifdef JACK_MONITOR
-        fNetTimeMon->Add ( ( ( float ) ( GetMicroSeconds() - JackDriver::fBeginDateUst ) / ( float ) fEngineControl->fPeriodUsecs ) * 100.f );
+        fNetTimeMon->Add ( ( ( float ) ( GetMicroSeconds() - fRcvSyncUst ) / ( float ) fEngineControl->fPeriodUsecs ) * 100.f );
 #endif
 
         return 0;
@@ -514,7 +520,7 @@ namespace Jack
             fNetAudioPlaybackBuffer->SetBuffer ( audio_port_index, GetOutputBuffer ( audio_port_index ) );
 
 #ifdef JACK_MONITOR
-        fNetTimeMon->Add ( ( ( float ) ( GetMicroSeconds() - JackDriver::fBeginDateUst ) / ( float ) fEngineControl->fPeriodUsecs ) * 100.f );
+        fNetTimeMon->Add ( ( ( float ) ( GetMicroSeconds() - fRcvSyncUst ) / ( float ) fEngineControl->fPeriodUsecs ) * 100.f );
 #endif
 
         //sync
@@ -525,7 +531,7 @@ namespace Jack
             return SOCKET_ERROR;
 
 #ifdef JACK_MONITOR
-        fNetTimeMon->Add ( ( ( float ) ( GetMicroSeconds() - JackDriver::fBeginDateUst ) / ( float ) fEngineControl->fPeriodUsecs ) * 100.f );
+        fNetTimeMon->Add ( ( ( float ) ( GetMicroSeconds() - fRcvSyncUst ) / ( float ) fEngineControl->fPeriodUsecs ) * 100.f );
 #endif
 
         //send data
@@ -533,7 +539,7 @@ namespace Jack
             return SOCKET_ERROR;
 
 #ifdef JACK_MONITOR
-        fNetTimeMon->AddLast ( ( ( float ) ( GetMicroSeconds() - JackDriver::fBeginDateUst ) / ( float ) fEngineControl->fPeriodUsecs ) * 100.f );
+        fNetTimeMon->AddLast ( ( ( float ) ( GetMicroSeconds() - fRcvSyncUst ) / ( float ) fEngineControl->fPeriodUsecs ) * 100.f );
 #endif
 
         return 0;
